--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
